fix2 overflow: hidden;

--- a/client/src/assets/css/styles.css
+++ b/client/src/assets/css/styles.css
@@ -23,6 +23,7 @@ html, body{
   color: white;
   background: #1C1C1F;
   height: 100%;
+  overflow: hidden;
 
 }
 .navigation a{
